# whisper-english-variant-converter

./: .gitignore  LICENSE  LICENSE_NOTES.md  NOTICE.md  README.md  build.md  edge-case-categories.md  edge-case-final.md  edge-cases.md  pyproject.toml
data/derived/: lexical_crosswalk.csv  spelling_crosswalk.csv
data/raw/: breame_meanings.csv  breame_spellings.csv  scowl_varcon.csv  uk2us.csv
samples/transcripts/: uk_english-uk_accent-uk_transcription.txt  uk_english-uk_accent-us_transcription.txt  uk_english-uk_accent.srt  uk_english-uk_accent.txt  uk_english-uk_accent.vtt  us_english-us_accent-uk_transcription.txt  us_english-us_accent-uk_transcription.vtt  us_english-us_accent.srt  us_english-us_accent.txt  us_english-us_accent.vtt
scripts/: build_crosswalk.py  parse_varcon.py  verify_crosswalk.py
src/english_variant_converter/: __init__.py  api.py  cli.py  data_loader.py  exception_policies.py  rules.py  tokenizer.py
src/english_variant_converter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/english_variant_converter/data/: lexical_crosswalk.csv  spelling_crosswalk.csv
src/english_variant_converter/data/exceptions/: spelling_exceptions.csv
tests/: test_api.py  test_rules.py  test_whisper_like_text.py
