[project]
name = "english-variant-converter"
version = "0.1.0"
description = "Convert English text between spelling variants (US, UK, AU, CA, ...)."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  {name = "Trelis Research"}
]
license = {text = "MIT"}
dependencies = []

[project.optional-dependencies]
test = [
  "pytest>=8.2",
  "pytest-cov>=5.0"
]

[project.scripts]
evc = "english_variant_converter.cli:main"

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["src"]

[tool.ruff]
line-length = 100

[tool.uv]
dev-dependencies = ["pytest>=8.2", "pytest-cov>=5.0"]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"english_variant_converter" = ["data/*.csv", "data/exceptions/*.csv"]
